fixed the escape command docs

--- a/doc/ratpoison.1
+++ b/doc/ratpoison.1
@@ -161,7 +161,7 @@ This deletes the current window. You can access it with the \fIC\-t k\fP
 keystroke.
 .TP
 .B escape \fIkey\fP
-Set the prefix to to \fIkey\fP. For example \fIescape ^b\fP sets the
+Set the prefix to to \fIkey\fP. For example \fIescape C-b\fP sets the
 prefix key to \fIC\-b\fP.
 .TP
 .B focus
